CUI.Input: Fixed default height of textarea when content-resize: true, this avoids jumping of the textareas.

--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -2402,6 +2402,7 @@ a[role="button"].cui-button-appearance-link {
 	.cui-input-content-size {
 		textarea {
 			min-height: 40px;
+			height: 40px;
 		}
 	}
 }
@@ -2409,6 +2410,7 @@ a[role="button"].cui-button-appearance-link {
 .cui-input-content-size {
 	textarea {
 		min-height: 40px;
+		height: 40px;
 		resize: none;
 	}
 }
